# AlignScore

./: pyproject.toml
alignscore/: inference.py
