[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alignscore"
version = "0.1.3"
authors = [
    { name = "Yuheng Zha", email = "yzha@ucsd.edu" },
    { name = "Yichi Yang", email = "yiy067@ucsd.edu" },
    { name = "Ruichen Li", email = "rul014@ucsd.edu" },
    { name = "Zhiting Hu", email = "zhh019@ucsd.edu" },
]
description = "An automatic factual consistency evaluation metric based on a unifined alignment function"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "spacy",
    "nltk",
    "torch",
    "transformers",
    "tqdm",
    "jsonlines",
    "numpy",
    "datasets",
    "scikit-learn",
    "pytorch_lightning",
    "scipy",
    "tensorboard",
    "protobuf"
]

[project.urls]
"Homepage" = "https://github.com/yuh-zha/AlignScore"
"Bug Tracker" = "https://github.com/yuh-zha/AlignScore/issues"
