[tool.poetry]
name = "alignscore"
version = "0.1.3"
description = ""
authors = [
    "Yuheng Zha <yzha@ucsd.edu>",
    "Yichi Yang <yiy067@ucsd.edu>",
    "Ruichen Li <rul014@ucsd.edu>",
    "Zhiting Hu <zhh019@ucsd.edu>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
spacy = "^3.0.0"
nltk = "^3.0.0"
torch = "^2.0.0"
transformers = "^4.0.0"
tqdm = "^4.0.0"
jsonlines = "^4.0.0"
numpy = "^1.0.0"
datasets = "^2.0.0"
scikit-learn = "^1.0.0"
pytorch-lightning = "^2.0.0"
scipy = "^1.0.0"
tensorboard = "^2.0.0"
protobuf = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
